# mcp-mistral-ocr

./: .gitignore  Dockerfile  README.md  pyproject.toml
src/mcp_mistral_ocr/: __init__.py  main.py  mistral_ocr.py
