[project]
name = "mcp-mistral-ocr"
version = "1.0.0"
description = "MCP Server for OCR processing using Mistral AI"
authors = []
dependencies = [
    "mistralai>=1.5.1",
    "aiohttp",
    "mcp[cli]",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "black",
    "isort",
    "mypy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_mistral_ocr"]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.isort]
profile = "black"
multi_line_output = 3
